--- a/app/TextToVoice/Dockerfile
+++ b/app/TextToVoice/Dockerfile
@@ -1,6 +1,6 @@
 # Use the specific PyTorch image with CUDA support
 #FROM pytorch/pytorch:2.0.1-cuda11.7-cudnn8-runtime
-FROM nvidia/cuda:11.4.2-cudnn8-runtime-ubuntu20.04
+FROM nvidia/cuda:12.2.2-base-ubuntu22.04
 
 
 RUN apt-get update && apt-get install -y python3-pip && \
