update docker compose yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   # Transcribe service
   record:
     depends_on:
-      transcribe:
-        condition: service_healthy
+      - transcribe
     build:
       context: ./aClient
       dockerfile: Dockerfile
