--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -14,7 +14,7 @@ COPY pyproject.toml poetry.lock ./
 
 # Configure poetry to not create a virtual environment and install dependencies
 RUN poetry config virtualenvs.create false && \
-    poetry install --no-dev
+    poetry install --no-dev flask-cors
 
 # Copy only the contents of the app directory
 COPY app/ ./
