--- a/app/Llm/Dockerfile
+++ b/app/Llm/Dockerfile
@@ -14,9 +14,8 @@ COPY pyproject.toml poetry.lock ./
 
 # Configure poetry to not create a virtual environment and install dependencies
 RUN poetry config virtualenvs.create false && \
-    poetry install --no-dev \
-
-RUN pip install flask-cors
+    poetry install --no-dev && \
+    pip install flask-cors
 
 # Copy only the contents of the app directory
 COPY app/ ./
